# VcCppSDLTetris

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameOverMode.cpp  GameOverMode.h  HighScoresMode.cpp  HighScoresMode.h  IGameMode.h  Makefile  Makefile.Debug  Makefile.Release  PlayMode.cpp  PlayMode.h  README.md  SDLTetris.cpp  StandByMode.cpp  StandByMode.h  TetrisConst.h  Tetromino.cpp  Tetromino.h  Vector2i.h
debug/: SDLTetris.d  Tetromino.d  Vector2i.d
